--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-gesture-handler": "^1.0.15",
     "react-native-htmlview": "^0.13.0",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-linear-gradient": "^2.5.3",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-modal": "^7.0.2",
@@ -44,6 +45,7 @@
     "react-native-timeline-listview": "^0.2.3",
     "react-native-toaster": "^1.2.2",
     "react-native-vector-icons": "^6.2.0",
+    "react-native-zss-rich-text-editor": "^1.1.0",
     "react-navigation": "^3.1.3",
     "react-navigation-material-bottom-tabs": "^1.0.0",
     "react-redux": "^6.0.0",
