--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "lottie-react-native": "^2.5.11",
     "native-base": "^2.12.1",
     "prop-types": "^15.6.2",
-    "react": "16.6.3",
+    "react": "^16.8.3",
+    "react-art": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-loadable": "^5.5.0",
-    "react-native": "0.57.8",
+    "react-native": "^0.59.8",
     "react-native-chart-kit": "^2.0.1",
     "react-native-easy-grid": "^0.2.0",
     "react-native-gesture-handler": "^1.0.15",
@@ -37,15 +39,16 @@
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-linear-gradient": "^2.5.3",
     "react-native-loading-spinner-overlay": "^1.0.1",
-    "react-native-modal": "^7.0.2",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-paper": "^2.14.0",
     "react-native-picker-module": "^1.0.1",
-    "react-native-svg": "^9.0.0",
+    "react-native-svg": "^6.5.3",
     "react-native-svg-charts": "^5.2.0",
     "react-native-timeline-listview": "^0.2.3",
     "react-native-toaster": "^1.2.2",
     "react-native-vector-icons": "^6.2.0",
+    "react-native-web": "^0.11.4",
+    "react-native-webview": "^5.10.0",
     "react-navigation": "^3.1.3",
     "react-navigation-material-bottom-tabs": "^1.0.0",
     "react-redux": "^6.0.0",
