--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'cnxapp'
+include ':react-native-webview'
+project(':react-native-webview').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-webview/android')
 include ':react-native-picker-module'
 project(':react-native-picker-module').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-picker-module/android')
 include ':lottie-react-native'
