--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-linear-gradient": "^2.5.3",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal-datetime-picker": "^7.4.2",
+    "react-native-multiple-select": "^0.5.2",
     "react-native-paper": "^2.14.0",
     "react-native-svg": "^6.5.3",
     "react-native-svg-charts": "^5.2.0",
