--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,16 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "chrome",
+      "name": "Debug iOS",
+      "program": "${workspaceRoot}/.vscode/launchReactNative.js",
+      "type": "reactnative",
       "request": "launch",
-      "name": "Launch Chrome against localhost",
-      "url": "http://localhost:8081",
-      "webRoot": "${workspaceFolder}"
+      "platform": "ios",
+      "sourceMaps": true,
+      "outDir": "${workspaceRoot}/.vscode/.react",
+      // "runArguments": [
+      //   "--simulator=\"iPad Air 2\""
+      // ]
     }
   ]
 }
