--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "hoist-non-react-statics": "^3.3.0",
     "immer": "^2.0.0",
     "lodash": "^4.17.11",
-    "lottie-react-native": "2.6.1",
+    "lottie-react-native": "^2.6.1",
     "native-base": "^2.12.1",
     "prop-types": "^15.6.2",
     "react": "^16.8.3",
