--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,9 +21,9 @@
       "platform": "ios",
       "sourceMaps": true,
       "outDir": "${workspaceRoot}/.vscode/.react",
-      // "runArguments": [
-      //   "--simulator=\"iPad Air 2\""
-      // ]
+      "runArguments": [
+        "--simulator=\"iPad Air 2\""
+      ]
     }
   ]
 }
