--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "immer": "^2.0.0",
     "lodash": "^4.17.11",
     "lottie-react-native": "^2.6.1",
+    "moment": "^2.24.0",
     "native-base": "^2.12.1",
     "prop-types": "^15.6.2",
     "react": "^16.8.3",
