--- a/package.json
+++ b/package.json
@@ -23,14 +23,13 @@
     "hoist-non-react-statics": "^3.3.0",
     "immer": "^2.0.0",
     "lodash": "^4.17.11",
-    "lottie-react-native": "^2.6.1",
     "moment": "^2.24.0",
     "native-base": "^2.12.1",
     "prop-types": "^15.6.2",
-    "react": "^16.8.3",
+    "react": "16.8.3",
     "react-art": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-native": "^0.59.8",
+    "react-native": "0.59.9",
     "react-native-chart-kit": "^2.0.1",
     "react-native-easy-grid": "^0.2.0",
     "react-native-gesture-handler": "^1.0.15",
