--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "start-ios": "react-native run-ios --simulator='iPad Air 2'",
     "start-android": "react-native run-android",
     "start-debugger": "open 'rndebugger://set-debugger-loc?host=localhost&port=8081'",
-    "eslint": "./pre-commit-eslint.sh"
+    "eslint": "eslint --ext .js src/",
+    "precommit-msg": "echo 'Pre-commit checks...' && exit 0",
+    "eslint-pre-commit": "./pre-commit-eslint.sh"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.4.2",
@@ -58,7 +60,10 @@
     "reselect": "^4.0.0",
     "whatwg-fetch": "^3.0.0"
   },
-  "pre-commit": ["eslint"],
+  "pre-commit": [
+    "precommit-msg",
+    "eslint-pre-commit"
+  ],
   "jest": {
     "preset": "react-native"
   },
@@ -79,6 +84,8 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-redux-saga": "^0.10.0",
+    "husky": "^2.7.0",
+    "pre-commit": "^1.2.2",
     "prettier": "^1.16.1",
     "webpack": "^4.29.1",
     "webpack-dev-server": "^3.1.14"
