--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-linear-gradient": "^2.5.3",
     "react-native-material-dropdown": "^0.11.1",
+    "react-native-modal": "^11.1.0",
     "react-native-modal-datetime-picker": "^7.4.2",
     "react-native-multiple-select": "^0.5.2",
     "react-native-paper": "^2.14.0",
