--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "react-native-modal-datetime-picker": "^7.4.2",
     "react-native-multiple-select": "^0.5.2",
     "react-native-paper": "^2.14.0",
+    "react-native-reanimated": "^1.1.0",
     "react-native-svg": "^6.5.3",
     "react-native-svg-charts": "^5.2.0",
+    "react-native-tab-view": "^2.9.0",
     "react-native-vector-icons": "^6.2.0",
     "react-native-web": "^0.11.4",
     "react-native-webview": "^5.10.0",
