--- a/ios/cnxapp/Info.plist
+++ b/ios/cnxapp/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -40,9 +42,11 @@
 	<key>NSCameraUsageDescription</key>
 	<string>BOAST app wants to access the Camera</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>BOAST app wants to access the location</string>
+	<string>This permission stems from a library we use and will never be called anyway. If you see this, deny access.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This permission stems from a library we use and will never be called anyway. If you see this, deny access.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>BOAST app wants to access the location</string>
+	<string>This permission stems from a library we use and will never be called anyway. If you see this, deny access.</string>
 	<key>NSMainNibFile</key>
 	<string>LaunchScreen</string>
 	<key>NSMicrophoneUsageDescription</key>
