--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,13 +7,15 @@ buildscript {
         compileSdkVersion = 28
         targetSdkVersion = 26
         supportLibVersion = "27.1.1"
+        googlePlayServicesVersion   = "16.0.1"
+        googlePlayServicesVisionVersion = "15.0.2"
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'com.android.tools.build:gradle:3.3.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -24,6 +26,8 @@ allprojects {
     repositories {
         mavenLocal()
         google()
+        maven { url "https://jitpack.io" }
+        maven { url "https://maven.google.com" }
         jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
