--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,4 +13,10 @@
   "editor.largeFileOptimizations": false,
   "workbench.colorTheme": "One Dark Pro Vivid",
   "explorer.confirmDragAndDrop": false,
+  "files.exclude": {
+    "**/.classpath": true,
+    "**/.project": true,
+    "**/.settings": true,
+    "**/.factorypath": true
+  },
 }
