--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,15 +24,21 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { 
+            url "https://maven.google.com" 
+        }
         mavenLocal()
-        google()
-        maven { url "https://jitpack.io" }
-        maven { url "https://maven.google.com" }
-        jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
+        maven { url "https://jitpack.io" }
+        maven {
+            url ("$rootDir/../node_modules/jsc-android/dist")
+        }
+        google()
+        jcenter()
+
     }
 }
 
