--- a/package.json
+++ b/package.json
@@ -19,45 +19,46 @@
     "eslint-pre-commit": "./pre-commit-eslint.sh"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.4.2",
+    "@react-native-community/async-storage": "^1.6.1",
     "@react-native-community/blur": "^3.3.1",
-    "@react-native-community/cameraroll": "^1.1.1",
+    "@react-native-community/cameraroll": "^1.2.1",
     "@redux-offline/redux-offline": "^2.5.1",
     "babel-polyfill": "^6.26.0",
     "hoist-non-react-statics": "^3.3.0",
     "immer": "^2.0.0",
+    "jetifier": "^1.6.4",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
-    "native-base": "^2.12.1",
+    "native-base": "^2.13.4",
     "prop-types": "^15.6.2",
     "react": "16.8.3",
     "react-art": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-native": "0.59.9",
-    "react-native-camera": "^3.0.1",
+    "react-native-camera": "^3.1.1",
     "react-native-chart-kit": "^2.0.1",
     "react-native-easy-grid": "^0.2.1",
-    "react-native-fs": "^2.14.1",
-    "react-native-gesture-handler": "^1.0.15",
+    "react-native-fs": "^2.13.2",
+    "react-native-gesture-handler": "^1.3.0",
     "react-native-htmlview": "^0.14.0",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-keyboard-aware-view": "^0.0.14",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-linear-gradient": "^2.5.3",
     "react-native-material-dropdown": "^0.11.1",
-    "react-native-modal": "^11.1.0",
+    "react-native-modal": "^11.3.1",
     "react-native-modal-datetime-picker": "^7.4.2",
     "react-native-multiple-select": "^0.5.2",
     "react-native-paper": "^2.14.0",
-    "react-native-reanimated": "^1.1.0",
-    "react-native-svg": "^6.5.3",
+    "react-native-reanimated": "^1.2.0",
+    "react-native-svg": "^9.6.4",
     "react-native-svg-charts": "^5.2.0",
     "react-native-swipeout": "^2.3.6",
-    "react-native-tab-view": "^2.9.0",
-    "react-native-vector-icons": "^6.2.0",
+    "react-native-tab-view": "^2.10.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.4",
     "react-native-webview": "^5.10.0",
-    "react-navigation": "^3.1.3",
+    "react-navigation": "^3.11.1",
     "react-navigation-material-bottom-tabs": "^1.0.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
@@ -98,10 +99,5 @@
     "prettier": "^1.16.1",
     "webpack": "^4.29.1",
     "webpack-dev-server": "^3.1.14"
-  },
-  "rnpm": {
-    "assets": [
-      "./assets/fonts/"
-    ]
   }
 }
