--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "moment": "^2.24.0",
     "native-base": "^2.13.4",
     "prop-types": "^15.6.2",
-    "react": "16.8.3",
+    "react": "16.8.6",
     "react-art": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-native": "0.59.9",
+    "react-native": "0.60.5",
     "react-native-camera": "^3.1.1",
     "react-native-chart-kit": "^2.0.1",
     "react-native-easy-grid": "^0.2.1",
@@ -82,9 +82,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@react-native-community/eslint-config": "^0.0.5",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
-    "eslint": "^5.0.0",
+    "eslint": "^6.1.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^3.6.0",
