--- a/ios/cnxapp/Info.plist
+++ b/ios/cnxapp/Info.plist
@@ -1,121 +1,123 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
+<dict>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string>BOAST</string>
+	<key>CFBundleExecutable</key>
+	<string>$(EXECUTABLE_NAME)</string>
+	<key>CFBundleIdentifier</key>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<key>CFBundleInfoDictionaryVersion</key>
+	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>Conexus Platform</string>
+	<key>CFBundlePackageType</key>
+	<string>APPL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>0.1</string>
+	<key>CFBundleSignature</key>
+	<string>????</string>
+	<key>CFBundleVersion</key>
+	<string>9</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
+	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>NSAppTransportSecurity</key>
 	<dict>
-		<key>LSApplicationCategoryType</key>
-		<string></string>
-		<key>CFBundleDevelopmentRegion</key>
-		<string>en</string>
-		<key>CFBundleDisplayName</key>
-		<string>BOAST</string>
-		<key>CFBundleExecutable</key>
-		<string>$(EXECUTABLE_NAME)</string>
-		<key>CFBundleIdentifier</key>
-		<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-		<key>CFBundleInfoDictionaryVersion</key>
-		<string>6.0</string>
-		<key>CFBundleName</key>
-		<string>Conexus Platform</string>
-		<key>CFBundlePackageType</key>
-		<string>APPL</string>
-		<key>CFBundleShortVersionString</key>
-		<string>0.1</string>
-		<key>CFBundleSignature</key>
-		<string>????</string>
-		<key>CFBundleVersion</key>
-		<string>3</string>
-		<key>LSRequiresIPhoneOS</key>
+		<key>NSAllowsArbitraryLoads</key>
 		<true/>
-		<key>NSAppTransportSecurity</key>
+		<key>NSExceptionDomains</key>
 		<dict>
-			<key>NSAllowsArbitraryLoads</key>
-			<true/>
-			<key>NSExceptionDomains</key>
+			<key>localhost</key>
 			<dict>
-				<key>localhost</key>
-				<dict>
-					<key>NSExceptionAllowsInsecureHTTPLoads</key>
-					<true/>
-				</dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
 			</dict>
 		</dict>
-		<key>NSCalendarsUsageDescription</key>
-		<string>App needs access for Calendars Usage.</string>
-		<key>NSBluetoothPeripheralUsageDescription</key>
-		<string>This permission stems from a library we use and will never be called anyway. If you see this, deny access.</string>
-		<key>NSAppleMusicUsageDescription</key>
-		<string>App needs access for Apple Music Usage.</string>
-		<key>NSMotionUsageDescription</key>
-		<string>This permission stems from a library we use and will never be called anyway. If you see this, deny access.</string>
-		<key>NSSpeechRecognitionUsageDescription</key>
-		<string>This permission stems from a library we use and will never be called anyway. If you see this, deny access.</string>
-		<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-		<string>This permission stems from a library we use and will never be called anyway. If you see this, deny access.</string>
-		<key>NSLocationAlwaysUsageDescription</key>
-		<string>This permission stems from a library we use and will never be called anyway. If you see this, deny access.</string>
-		<key>NSLocationWhenInUseUsageDescription</key>
-		<string>This permission stems from a library we use and will never be called anyway. If you see this, deny access.</string>
-		<key>NSMainNibFile</key>
-		<string>LaunchScreen</string>
-		<key>NSMicrophoneUsageDescription</key>
-		<string>BOAST app wants to access the Microphone</string>
-		<key>NSPhotoLibraryAddUsageDescription</key>
-		<string>BOAST app wants to access the Photo library</string>
-		<key>NSPhotoLibraryUsageDescription</key>
-		<string>BOAST app wants to access the library</string>
-		<key>UIAppFonts</key>
-		<array>
-			<string>ProximaNova-Regular.otf</string>
-			<string>ProximaNova-Semibold.otf</string>
-			<string>ProximaNovaT-Thin.otf</string>
-			<string>Montserrat-Regular.ttf</string>
-			<string>Montserrat-SemiBold.ttf</string>
-			<string>Montserrat-Light.ttf</string>
-			<string>AntDesign.ttf</string>
-			<string>Entypo.ttf</string>
-			<string>EvilIcons.ttf</string>
-			<string>Feather.ttf</string>
-			<string>FontAwesome.ttf</string>
-			<string>FontAwesome5_Brands.ttf</string>
-			<string>FontAwesome5_Regular.ttf</string>
-			<string>FontAwesome5_Solid.ttf</string>
-			<string>Foundation.ttf</string>
-			<string>Ionicons.ttf</string>
-			<string>MaterialCommunityIcons.ttf</string>
-			<string>MaterialIcons.ttf</string>
-			<string>Octicons.ttf</string>
-			<string>Roboto_medium.ttf</string>
-			<string>Roboto.ttf</string>
-			<string>rubicon-icon-font.ttf</string>
-			<string>SimpleLineIcons.ttf</string>
-			<string>Zocial.ttf</string>
-			<string>FontAwesome5_Pro_Brands.ttf</string>
-			<string>FontAwesome5_Pro_Light.ttf</string>
-			<string>FontAwesome5_Pro_Regular.ttf</string>
-			<string>FontAwesome5_Pro_Solid.ttf</string>
-		</array>
-		<key>UILaunchStoryboardName</key>
-		<string>LaunchScreen</string>
-		<key>UIRequiredDeviceCapabilities</key>
-		<array>
-			<string>armv7</string>
-		</array>
-		<key>UIRequiresFullScreen</key>
-		<true/>
-		<key>UISupportedInterfaceOrientations</key>
-		<array>
-			<string>UIInterfaceOrientationPortrait</string>
-			<string>UIInterfaceOrientationLandscapeLeft</string>
-			<string>UIInterfaceOrientationLandscapeRight</string>
-		</array>
-		<key>UISupportedInterfaceOrientations~ipad</key>
-		<array>
-			<string>UIInterfaceOrientationPortrait</string>
-			<string>UIInterfaceOrientationLandscapeLeft</string>
-			<string>UIInterfaceOrientationLandscapeRight</string>
-			<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		</array>
-		<key>UIViewControllerBasedStatusBarAppearance</key>
-		<false/>
 	</dict>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>App needs access for Apple Music Usage.</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>This permission stems from a library we use and will never be called anyway. If you see this, deny access.</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>App needs access for Calendars Usage.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>App needs access for camera.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This permission stems from a library we use and will never be called anyway. If you see this, deny access.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This permission stems from a library we use and will never be called anyway. If you see this, deny access.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This permission stems from a library we use and will never be called anyway. If you see this, deny access.</string>
+	<key>NSMainNibFile</key>
+	<string>LaunchScreen</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>BOAST app wants to access the Microphone</string>
+	<key>NSMotionUsageDescription</key>
+	<string>This permission stems from a library we use and will never be called anyway. If you see this, deny access.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>BOAST app wants to access the Photo library</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>BOAST app wants to access the library</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>This permission stems from a library we use and will never be called anyway. If you see this, deny access.</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>ProximaNova-Regular.otf</string>
+		<string>ProximaNova-Semibold.otf</string>
+		<string>ProximaNovaT-Thin.otf</string>
+		<string>Montserrat-Regular.ttf</string>
+		<string>Montserrat-SemiBold.ttf</string>
+		<string>Montserrat-Light.ttf</string>
+		<string>AntDesign.ttf</string>
+		<string>Entypo.ttf</string>
+		<string>EvilIcons.ttf</string>
+		<string>Feather.ttf</string>
+		<string>FontAwesome.ttf</string>
+		<string>FontAwesome5_Brands.ttf</string>
+		<string>FontAwesome5_Regular.ttf</string>
+		<string>FontAwesome5_Solid.ttf</string>
+		<string>Foundation.ttf</string>
+		<string>Ionicons.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
+		<string>MaterialIcons.ttf</string>
+		<string>Octicons.ttf</string>
+		<string>Roboto_medium.ttf</string>
+		<string>Roboto.ttf</string>
+		<string>rubicon-icon-font.ttf</string>
+		<string>SimpleLineIcons.ttf</string>
+		<string>Zocial.ttf</string>
+		<string>FontAwesome5_Pro_Brands.ttf</string>
+		<string>FontAwesome5_Pro_Light.ttf</string>
+		<string>FontAwesome5_Pro_Regular.ttf</string>
+		<string>FontAwesome5_Pro_Solid.ttf</string>
+	</array>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
+	<key>UIRequiredDeviceCapabilities</key>
+	<array>
+		<string>armv7</string>
+	</array>
+	<key>UIRequiresFullScreen</key>
+	<true/>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+	<key>UISupportedInterfaceOrientations~ipad</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
+</dict>
 </plist>
